[package]
name = "bili_recorder"
version = "0.1.0"
authors = ["tyanb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1.0.37"
serde_json = "1.0.61"
serde = { version = "1.0.118", features = ["derive"] }
futures = "0.3"